--- a/framework/build.gradle
+++ b/framework/build.gradle
@@ -20,4 +20,6 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.loopj.android:android-async-http:1.4.6'
+    compile 'com.google.code.gson:gson:2.3.1'
 }
