--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,15 @@ android {
         versionCode 1
         versionName "1.0"
     }
+
+    lintOptions {
+        xmlReport false
+        warningsAsErrors true
+        quiet false
+        showAll true
+        disable 'OldTargetApi'
+    }
+
     buildTypes {
         release {
             minifyEnabled false
