--- a/framework/src/main/AndroidManifest.xml
+++ b/framework/src/main/AndroidManifest.xml
@@ -1,4 +1,6 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<manifest xmlns:tools="http://schemas.android.com/tools"
+    tools:overrideLibrary="com.android.app.framework"
     package="com.android.app.framework">
 
     <application />
