--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,21 @@
-buildscript {
-    repositories {
-        mavenCentral()
-    }
-
-    dependencies {
-        classpath 'com.android.tools.build:gradle:1.0.0'
-    }
+ext {
+    compileSdkVersion = 21
+    buildToolsVersion = System.env.CUSTOM_BUILDTOOLS != null ? System.env.CUSTOM_BUILDTOOLS : '21.1.2'
 }
 
-def isReleaseBuild() {
-    return version.contains("SNAPSHOT") == false
+buildscript {
+    def gradleVersion = System.env.CUSTOM_GRADLE != null ? System.env.CUSTOM_GRADLE : '1.0.1'
+
+    repositories {
+        if (System.env.CUSTOM_REPO != null) {
+            maven { url System.env.CUSTOM_REPO }
+        } else {
+            mavenCentral()
+        }
+    }
+    dependencies {
+        classpath "com.android.tools.build:gradle:$gradleVersion"
+    }
 }
 
 allprojects {
