--- a/simple/build.gradle
+++ b/simple/build.gradle
@@ -1,19 +1,19 @@
-apply plugin: 'com.android.library'
+apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
     buildToolsVersion rootProject.ext.buildToolsVersion
 
     defaultConfig {
+        applicationId "com.android.app.simple"
         minSdkVersion 8
+        targetSdkVersion 21
+        versionCode 1
+        versionName "1.0"
     }
 }
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.squareup.retrofit:retrofit:1.9.0'
-    compile 'com.squareup.okhttp:okhttp:2.3.0'
-    compile 'com.squareup.okhttp:okhttp-urlconnection:2.3.0'
-    compile project(':framework')
+    compile project(':app')
 }
-
-
