--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,6 +13,7 @@ dependencies {
     compile 'com.squareup.retrofit:retrofit:1.9.0'
     compile 'com.squareup.okhttp:okhttp:2.3.0'
     compile 'com.squareup.okhttp:okhttp-urlconnection:2.3.0'
+    compile 'com.squareup.picasso:picasso:2.5.2'
     compile project(':framework')
 }
 
