--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,6 +14,7 @@ dependencies {
     compile 'com.squareup.okhttp:okhttp:2.3.0'
     compile 'com.squareup.okhttp:okhttp-urlconnection:2.3.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.squareup:otto:1.3.6'
     compile project(':framework')
 }
 
