--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,11 +10,21 @@ android {
 }
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+
+    //net
     compile 'com.squareup.retrofit:retrofit:1.9.0'
     compile 'com.squareup.okhttp:okhttp:2.3.0'
     compile 'com.squareup.okhttp:okhttp-urlconnection:2.3.0'
+
+    // img
     compile 'com.squareup.picasso:picasso:2.5.2'
+
+    // event bus
     compile 'com.squareup:otto:1.3.6'
+
+    // orm
+    compile 'de.greenrobot:greendao:1.3.7'
+
     compile project(':framework')
 }
 
