--- a/simple/build.gradle
+++ b/simple/build.gradle
@@ -1,8 +1,8 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion rootProject.ext.compileSdkVersion
-    buildToolsVersion rootProject.ext.buildToolsVersion
+    compileSdkVersion customCompileSdkVersion
+    buildToolsVersion customBuildToolsVersion
 
     defaultConfig {
         applicationId "com.android.app.simple"
