--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,8 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion rootProject.ext.compileSdkVersion
-    buildToolsVersion rootProject.ext.buildToolsVersion
+    compileSdkVersion customCompileSdkVersion
+    buildToolsVersion customBuildToolsVersion
 
     defaultConfig {
         minSdkVersion 8
@@ -12,18 +12,16 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
     //net
-    compile 'com.squareup.retrofit:retrofit:1.9.0'
-    compile 'com.squareup.okhttp:okhttp:2.3.0'
-    compile 'com.squareup.okhttp:okhttp-urlconnection:2.3.0'
-
+    compile(
+            libraries.retrofit,
+            libraries.okhttp,
+            libraries.okhttp_urlconnection,
+    )
     // img
-    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile libraries.picasso
 
     // event bus
-    compile 'com.squareup:otto:1.3.6'
-
-    // orm
-    compile 'de.greenrobot:greendao:1.3.7'
+    compile libraries.otto
 
     compile project(':framework')
 }
