--- a/framework/build.gradle
+++ b/framework/build.gradle
@@ -1,6 +1,5 @@
 apply plugin: 'java'
 
 dependencies {
-    compile fileTree(dir: 'libs', include: '*.jar')
-    compile 'com.google.guava:guava:18.0'
+    compile libraries.guava
 }
