--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ buildscript {
 }
 
 allprojects {
-    group = 'com.android.app'
+    group = 'com.frodo.android.app'
 
     repositories {
         jcenter()
