--- a/simple/build.gradle
+++ b/simple/build.gradle
@@ -14,6 +14,9 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile(
+            jars.tmdb_java_philm,
+            jars.trakt_java_philm,
+    )
     compile project(':app')
 }
