--- a/simple/src/main/AndroidManifest.xml
+++ b/simple/src/main/AndroidManifest.xml
@@ -28,6 +28,8 @@
     <uses-permission android:name="android.permission.VIBRATE"/>
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
 
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+
     <application
             android:allowBackup="true"
             android:label="@string/app_name"
@@ -36,7 +38,7 @@
             android:theme="@style/AppTheme">
 
         <activity
-                android:name="com.frodo.android.app.simple.SplashActivity"
+                android:name=".SplashActivity"
                 android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
