extral cloud entities and local entities to java project

--- a/simple/build.gradle
+++ b/simple/build.gradle
@@ -18,5 +18,6 @@ dependencies {
             jars.tmdb_java_philm,
             jars.trakt_java_philm,
     )
+    compile project(':simpleentity')
     compile project(':app')
 }
