--- a/dependencyDefinitions.gradle
+++ b/dependencyDefinitions.gradle
@@ -1,9 +1,11 @@
 ext.versions = [
-        guava   : '18.0',
-        retrofit: '1.9.0',
-        okhttp  : '2.3.0',
-        picasso : '2.5.2',
-        otto    : '1.3.6',
+        guava     : '18.0',
+        retrofit  : '1.9.0',
+        okhttp    : '2.3.0',
+        picasso   : '2.5.2',
+        otto      : '1.3.6',
+        rxjava    : '1.0.13',
+        support_v4: '22.2.1',
 ]
 
 ext.libraries = [
@@ -18,14 +20,18 @@ ext.libraries = [
         picasso             : "com.squareup.picasso:picasso:${versions.picasso}",
 
         // event bus
-        otto                : "com.squareup:otto:${versions.otto}",
+        // otto                : "com.squareup:otto:${versions.otto}",
+
+        // rxjava replace otto
+        rxjava              : "io.reactivex:rxjava:${versions.rxjava}",
+
+        // android-support-v4
+        support_v4          : "com.android.support:support-v4:${versions.support_v4}",
 ]
 
 ext.jars = [
-        android_support_v4: files('libs/android-support-v4.jar'),
-        realm: files('libs/realm-0.81.1.jar'),
-        tmdb_java_philm   : files('libs/tmdb-java-philm.jar'),
-        trakt_java_philm  : files('libs/trakt-java-philm.jar'),
+        tmdb_java_philm : files('libs/tmdb-java-philm.jar'),
+        trakt_java_philm: files('libs/trakt-java-philm.jar'),
 ]
 
 
