--- a/dependencyDefinitions.gradle
+++ b/dependencyDefinitions.gradle
@@ -5,6 +5,7 @@ ext.versions = [
         picasso   : '2.5.2',
         otto      : '1.3.6',
         rxjava    : '1.0.13',
+        rxandroid : '1.0.1',
         support_v4: '22.2.1',
 ]
 
@@ -21,9 +22,10 @@ ext.libraries = [
 
         // event bus
         // otto                : "com.squareup:otto:${versions.otto}",
-
         // rxjava replace otto
         rxjava              : "io.reactivex:rxjava:${versions.rxjava}",
+        // rxandroid
+        rxandroid           : "io.reactivex:rxandroid:${versions.rxandroid}",
 
         // android-support-v4
         support_v4          : "com.android.support:support-v4:${versions.support_v4}",
