--- a/dependencyDefinitions.gradle
+++ b/dependencyDefinitions.gradle
@@ -6,29 +6,34 @@ ext.versions = [
         otto      : '1.3.6',
         rxjava    : '1.0.13',
         rxandroid : '1.0.1',
+        leakcanary: '1.3.1',
         support_v4: '22.2.1',
 ]
 
 ext.libraries = [
-        guava               : "com.google.guava:guava:${versions.guava}",
+        guava                   : "com.google.guava:guava:${versions.guava}",
 
         // net
-        retrofit            : "com.squareup.retrofit:retrofit:${versions.retrofit}",
-        okhttp              : "com.squareup.okhttp:okhttp:${versions.okhttp}",
-        okhttp_urlconnection: "com.squareup.okhttp:okhttp-urlconnection:${versions.okhttp}",
+        retrofit                : "com.squareup.retrofit:retrofit:${versions.retrofit}",
+        okhttp                  : "com.squareup.okhttp:okhttp:${versions.okhttp}",
+        okhttp_urlconnection    : "com.squareup.okhttp:okhttp-urlconnection:${versions.okhttp}",
 
         // img
-        picasso             : "com.squareup.picasso:picasso:${versions.picasso}",
+        picasso                 : "com.squareup.picasso:picasso:${versions.picasso}",
 
         // event bus
         // otto                : "com.squareup:otto:${versions.otto}",
         // rxjava replace otto
-        rxjava              : "io.reactivex:rxjava:${versions.rxjava}",
+        rxjava                  : "io.reactivex:rxjava:${versions.rxjava}",
         // rxandroid
-        rxandroid           : "io.reactivex:rxandroid:${versions.rxandroid}",
+        rxandroid               : "io.reactivex:rxandroid:${versions.rxandroid}",
+
+        // leakcanary
+        leakcanary_android      : "com.squareup.leakcanary:leakcanary-android:${versions.leakcanary}",
+        leakcanary_android_no_op: "com.squareup.leakcanary:leakcanary-android-no-op:${versions.leakcanary}",
 
         // android-support-v4
-        support_v4          : "com.android.support:support-v4:${versions.support_v4}",
+        support_v4              : "com.android.support:support-v4:${versions.support_v4}",
 ]
 
 ext.jars = [
