remove unused code and fix logcollector

--- a/simple/build.gradle
+++ b/simple/build.gradle
@@ -23,10 +23,10 @@ android {
     }
 
     dependencies {
-        /*compile(
+        compile(
                 jars.tmdb_java_philm,
                 jars.trakt_java_philm,
-        )*/
+        )
 
         compile libraries.rxandroid
         compile project(':simpleentity')
