--- a/build.gradle
+++ b/build.gradle
@@ -17,19 +17,67 @@ buildscript {
     }
 }
 
-allprojects {
-    repositories {
-        jcenter()
+// See http://blog.joda.org/2014/02/turning-off-doclint-in-jdk-8-javadoc.html.
+if (JavaVersion.current().isJava8Compatible()) {
+    allprojects {
+        tasks.withType(Javadoc) {
+            options.addStringOption('Xdoclint:none', '-quiet')
+        }
     }
+}
 
+subprojects {
     tasks.withType(JavaCompile) {
         options.encoding = "UTF-8"
-        options.compilerArgs << "-Xlint:unchecked"
-
         sourceCompatibility = JavaVersion.VERSION_1_7
         targetCompatibility = JavaVersion.VERSION_1_7
     }
 }
 
-apply plugin: 'android-reporting'
+subprojects { project ->
+    repositories {
+        jcenter()
+        maven {
+            url "https://oss.sonatype.org/content/repositories/snapshots"
+        }
+    }
+
+    apply plugin: 'checkstyle'
+
+    checkstyle {
+        toolVersion = "6.6"
+    }
+
+    checkstyle {
+        configFile = new File(rootDir, 'checkstyle.xml')
+        configProperties.checkStyleConfigDir = rootProject.rootDir
+    }
+
+    task checkstyle(type: Checkstyle) {
+        source 'src'
+        include '**/*.java'
+        exclude '**/gen/**'
+
+        // empty classpath
+        classpath = files()
+    }
+
+    afterEvaluate {
+        if (project.tasks.findByName('check')) {
+            check.dependsOn('checkstyle')
+        }
+    }
+
+    gradle.projectsEvaluated {
+        tasks.withType(JavaCompile) {
+            if (!name.contains('Test')) {
+                options.compilerArgs << '-Xlint:unchecked' << '-Xlint:deprecation'
+            }
+        }
+    }
+}
+
+task wrapper(type: Wrapper) {
+    gradleVersion = '2.5'
+}
 
