--- a/dependencyDefinitions.gradle
+++ b/dependencyDefinitions.gradle
@@ -3,6 +3,7 @@ ext.versions = [
         retrofit  : '1.9.0',
         okhttp    : '2.3.0',
         picasso   : '2.5.2',
+        glide     : '3.6.1',
         otto      : '1.3.6',
         rxjava    : '1.0.13',
         rxandroid : '1.0.1',
@@ -20,6 +21,8 @@ ext.libraries = [
 
         // img
         picasso                 : "com.squareup.picasso:picasso:${versions.picasso}",
+        // Or glide
+        glide                   : "com.github.bumptech.glide:glide:${versions.glide}",
 
         // event bus
         // otto                : "com.squareup:otto:${versions.otto}",
