--- a/build.gradle
+++ b/build.gradle
@@ -11,9 +11,9 @@ buildscript {
     repositories {
         jcenter()
     }
-
+    def ANDROID_GRADLE_VERSION = '1.3.0'
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.3.0'
+        classpath "com.android.tools.build:gradle:${ANDROID_GRADLE_VERSION}"
     }
 }
 
