--- a/variants.gradle
+++ b/variants.gradle
@@ -1,19 +1,25 @@
 ext {
-    basePackageName = 'com.android.app.simple'
-    resAppColorName = 'build_brand_primary'
-    resAppName = 'build_app_name'
+
+    COMPILE_SDK_VERSION = 22
+    BUILD_TOOLS_VERSION = '22.0.1'
+    TARGET_SDK_VERSION = 22
+    MIN_SDK_VERSION = 9
+
+    BASE_PACKAGENAME = 'com.android.app.simple'
+    RES_APP_COLOR_NAME = 'build_brand_primary'
+    RES_APP_NAME = 'build_app_name'
 
     paid = [
-            packageName: "${basePackageName}.premium",
-            appName    : "Android Framework Compile With Gradle For Paid",
-            versionName: "3.0.0",
+            packageName: "${BASE_PACKAGENAME}.premium",
+            appName    : 'Android Framework Compile With Gradle For Paid',
+            versionName: '3.0.0',
             versionCode: 5
     ]
 
     free = [
-            packageName: "${basePackageName}.free",
-            appName    : "Android Framework Compile With Gradle For Free",
-            versionName: "3.5.0",
+            packageName: "${BASE_PACKAGENAME}.free",
+            appName    : 'Android Framework Compile With Gradle For Free',
+            versionName: '3.5.0',
             versionCode: 8
     ]
 }
