--- a/simple/src/main/AndroidManifest.xml
+++ b/simple/src/main/AndroidManifest.xml
@@ -36,7 +36,7 @@
             android:theme="@style/AppTheme">
 
         <activity
-                android:name=".SplashActivity"
+                android:name=".MainActivity"
                 android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -46,7 +46,7 @@
         </activity>
 
         <activity
-                android:name="com.frodo.android.app.ui.activity.FragmentContainerActivity2"
+                android:name="com.frodo.android.app.ui.activity.FragmentContainerActivity"
                 android:screenOrientation="portrait" />
     </application>
 
