--- a/dependencyDefinitions.gradle
+++ b/dependencyDefinitions.gradle
@@ -1,41 +1,73 @@
 ext.versions = [
-        guava     : '19.0',
-        retrofit  : '1.9.0',
-        okhttp    : '2.3.0',
-        picasso   : '2.5.2',
-        glide     : '3.6.1',
-        rxjava    : '1.1.0',
-        rxandroid : '1.1.0',
-        leakcanary: '1.3.1',
-        support_v4: '23.1.1',
+        guava        : '19.0',
+        retrofit     : '1.9.0',
+        okhttp       : '2.3.0',
+        picasso      : '2.5.2',
+        glide        : '3.6.1',
+        rxjava       : '1.1.0',
+        rxandroid    : '1.1.0',
+        leakcanary   : '1.3.1',
+        support      : '23.1.1',
+
+        // test
+        junit        : '4.12',
+        mockito      : '1.10.19',
+        power_mockito: '1.6.4',
+        hamcrest     : '1.3',
+        runner       : '0.4.1',
+        rules        : '0.4.1',
+        espresso     : '2.2.1',
 ]
 
 ext.libraries = [
-        guava                   : "com.google.guava:guava:${versions.guava}",
+        guava                                : "com.google.guava:guava:${versions.guava}",
 
         // net
-        retrofit                : "com.squareup.retrofit:retrofit:${versions.retrofit}",
-        okhttp                  : "com.squareup.okhttp:okhttp:${versions.okhttp}",
-        okhttp_urlconnection    : "com.squareup.okhttp:okhttp-urlconnection:${versions.okhttp}",
+        retrofit                             : "com.squareup.retrofit:retrofit:${versions.retrofit}",
+        okhttp                               : "com.squareup.okhttp:okhttp:${versions.okhttp}",
+        okhttp_urlconnection                 : "com.squareup.okhttp:okhttp-urlconnection:${versions.okhttp}",
 
         // img
-        picasso                 : "com.squareup.picasso:picasso:${versions.picasso}",
+        picasso                              : "com.squareup.picasso:picasso:${versions.picasso}",
         // Or glide
-        glide                   : "com.github.bumptech.glide:glide:${versions.glide}",
+        glide                                : "com.github.bumptech.glide:glide:${versions.glide}",
 
         // event bus
         // otto                : "com.squareup:otto:${versions.otto}",
         // rxjava replace otto
-        rxjava                  : "io.reactivex:rxjava:${versions.rxjava}",
+        rxjava                               : "io.reactivex:rxjava:${versions.rxjava}",
         // rxandroid
-        rxandroid               : "io.reactivex:rxandroid:${versions.rxandroid}",
+        rxandroid                            : "io.reactivex:rxandroid:${versions.rxandroid}",
 
         // leakcanary
-        leakcanary_android      : "com.squareup.leakcanary:leakcanary-android:${versions.leakcanary}",
-        leakcanary_android_no_op: "com.squareup.leakcanary:leakcanary-android-no-op:${versions.leakcanary}",
+        leakcanary_android                   : "com.squareup.leakcanary:leakcanary-android:${versions.leakcanary}",
+        leakcanary_android_no_op             : "com.squareup.leakcanary:leakcanary-android-no-op:${versions.leakcanary}",
 
-        // android-support-v4
-        support_v4              : "com.android.support:support-v4:${versions.support_v4}",
+        // android-support
+        support_v4                           : "com.android.support:support-v4:${versions.support}",
+        appcompat_v7                         : "com.android.support:appcompat-v7:${versions.support}",
+        cardview_v7                          : "com.android.support:cardview-v7:${versions.support}",
+        design                               : "com.android.support:design:${versions.support}",
+        recyclerview_v7                      : "com.android.support:recyclerview-v7:${versions.support}",
+        support_annotations                      : "com.android.support:support-annotations:${versions.support}",
+
+
+        // Dependencies for local unit tests
+        junit                                : "junit:junit:${versions.junit}",
+        mockito                              : "org.mockito:mockito-all:${versions.mockito}",
+        hamcrest                             : "org.hamcrest:hamcrest-all:${versions.hamcrest}",
+        powermock_module_junit4              : "org.powermock:powermock-module-junit4:${versions.power_mockito}",
+        powermock_api_mockito                : "org.powermock:powermock-api-mockito:${versions.power_mockito}",
+
+        // Android Testing Support Library's runner and rules
+        android_runner                       : "com.android.support.test:runner:${versions.runner}",
+        android_rules                        : "com.android.support.test:rules:${versions.rules}",
+
+        // Espresso UI Testing dependencies.
+        android_test_espresso_idling_resource: "com.android.support.test.espresso:espresso-idling-resource:${versions.espresso}",
+        android_test_espresso_core           : "com.android.support.test.espresso:espresso-core:${versions.espresso}",
+        android_test_espresso_contrib        : "com.android.support.test.espresso:espresso-contrib:${versions.espresso}",
+        android_test_espresso_intents        : "com.android.support.test.espresso:espresso-intents:${versions.espresso}",
 ]
 
 ext.jars = [
