--- a/variants.gradle
+++ b/variants.gradle
@@ -1,9 +1,9 @@
 ext {
 
-    COMPILE_SDK_VERSION = 22
-    BUILD_TOOLS_VERSION = '22.0.1'
+    COMPILE_SDK_VERSION = 23
+    BUILD_TOOLS_VERSION = '23.0.2'
     TARGET_SDK_VERSION = 22
-    MIN_SDK_VERSION = 9
+    MIN_SDK_VERSION = 10
 
     BASE_PACKAGENAME = 'com.android.app.simple'
     RES_APP_COLOR_NAME = 'build_brand_primary'
@@ -21,5 +21,12 @@ ext {
             appName    : 'Android Framework Compile With Gradle For Free',
             versionName: '3.5.0',
             versionCode: 8
+    ]
+
+    mock = [
+            packageName: "${BASE_PACKAGENAME}.mock",
+            appName    : 'Android Framework Compile With Gradle For Mock',
+            versionName: '1.0.0',
+            versionCode: 1
     ]
 }
