--- a/gradle.properties
+++ b/gradle.properties
@@ -18,3 +18,9 @@
 # org.gradle.parallel=true
 android.useDeprecatedNdk=true
 
+# maven push
+bintray.user=frodo
+bintray.apikey=4107951a8ab0f4acee0ea61edc94ef1de46363f9
+bintray.gpg.password=A07127014s
+
+
