--- a/variants.gradle
+++ b/variants.gradle
@@ -28,4 +28,27 @@ ext {
             versionName: '1.0.0',
             versionCode: 1
     ]
+
+    // maven push
+    bintrayRepo = 'maven'
+    bintrayName = 'app-architecture'
+
+    publishedGroupId = 'com.github.frodoking'
+    libraryName = 'AppArchitecture'
+    artifact = 'app-architecture'
+
+    libraryDescription = 'A app architecture'
+
+    siteUrl = 'https://github.com/frodoking/App-Architecture'
+    gitUrl = 'https://github.com/frodoking/App-Architecture.git'
+
+    libraryVersion = '0.1.0'
+
+    developerId = 'frodoking'
+    developerName = 'Frodo'
+    developerEmail = 'awangyun8@gmail.com'
+
+    licenseName = 'The Apache Software License, Version 2.0'
+    licenseUrl = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+    allLicenses = ["Apache-2.0"]
 }
