--- a/gradle.properties
+++ b/gradle.properties
@@ -19,8 +19,8 @@
 android.useDeprecatedNdk=true
 
 # maven push
-bintray.user=frodo
-bintray.apikey=4107951a8ab0f4acee0ea61edc94ef1de46363f9
-bintray.gpg.password=A07127014s
+bintray.user=xxxx
+bintray.apikey=xxxx
+bintray.gpg.password=xxx
 
 
