--- a/app/maven_push_aar.gradle
+++ b/app/maven_push_aar.gradle
@@ -1,7 +1,8 @@
-ext.bintrayName = 'app-architecture-android'
-ext.libraryName = 'AppArchitectureAndroid'
-ext.artifact = 'app-architecture-android'
-ext.libraryDescription = 'A app architecture on android'
-
+ext {
+    bintrayName = 'app-architecture-android'
+    libraryName = 'AppArchitectureAndroid'
+    artifact = 'app-architecture-android'
+    libraryDescription = 'A app architecture on android'
+}
 apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/installv1.gradle'
 apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/bintrayv1.gradle'
