--- a/scripts/bintray.properties
+++ b/scripts/bintray.properties
@@ -1,3 +1,3 @@
-bintray.user=//xxx
-bintray.apikey=//xxx
-bintray.gpg.password=//xxx
+bintray.user=frodoking
+bintray.apikey=4107951a8ab0f4acee0ea61edc94ef1de46363f9
+bintray.gpg.password=A07127014s
