--- a/simple/build.gradle
+++ b/simple/build.gradle
@@ -10,6 +10,25 @@ android {
         targetSdkVersion TARGET_SDK_VERSION
     }
 
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES.txt'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/notice.txt'
+        exclude 'META-INF/license.txt'
+        exclude 'META-INF/dependencies.txt'
+        exclude 'META-INF/LGPL2.1'
+        exclude 'META-INF/maven/com.belerweb/pinyin4j/pom.properties'
+        exclude 'META-INF/maven/com.belerweb/pinyin4j/pom.xml'
+    }
+
+    lintOptions {
+        abortOnError false
+    }
+
     productFlavors.whenObjectAdded { flavor ->
         def flavorData = rootProject.ext[flavor.name]
         flavor.applicationId flavorData.packageName
@@ -21,9 +40,9 @@ android {
         paid {}
         free {}
     }
+}
 
-    dependencies {
-        compile libraries.rxandroid
-        compile project(':app')
-    }
+dependencies {
+    compile libraries.rxandroid
+    compile project(':app')
 }
