fix bean error(add some bean only for special business, use String to represent base data.)

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,7 +29,7 @@ dependencies {
     )
 
     // img
-    compile libraries.picasso
+    compile libraries.glide
 
     // event bus
     // compile libraries.otto
