update config. fix error and maven push.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,7 +14,7 @@ android {
     }
 }
 dependencies {
-    compile libraries.support_v4
+    compile libraries.appcompat_v7
 
     //net
     compile(
