--- a/gradle.properties
+++ b/gradle.properties
@@ -1,21 +1,23 @@
-# Project-wide Gradle settings.
-
-# IDE (e.g. Android Studio) users:
-# Gradle settings configured through the IDE *will override*
-# any settings specified in this file.
-
-# For more details on how to configure your build environment visit
-# http://www.gradle.org/docs/current/userguide/build_environment.html
-
-# Specifies the JVM arguments used for the daemon process.
-# The setting is particularly useful for tweaking memory settings.
-# Default value: -Xmx10248m -XX:MaxPermSize=256m
-# org.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
-
-# When configured, Gradle will run in incubating parallel mode.
-# This option should only be used with decoupled projects. More details, visit
-# http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
-# org.gradle.parallel=true
 android.useDeprecatedNdk=true
+
+POM_GROUP_ID=com.github.frodoking
+POM_URL=https://github.com/frodoking/App-Architecture
+POM_SCM_URL=https://github.com/frodoking/App-Architecture
+POM_SCM_CONNECTION=scm:git@github.com:frodoking/App-Architecture.git
+POM_SCM_DEV_CONNECTION=scm:git@github.com:frodoking/App-Architecture.git
+POM_LICENCE_COMMENTS=A business-friendly OSS license
+POM_LICENCE_NAME=The Apache Software License, Version 2.0
+POM_LICENCE_URL=http://www.apache.org/licenses/LICENSE-2.0.txt
+POM_LICENCE_DIST=repo
+POM_DEVELOPER_ID=frodoking
+POM_DEVELOPER_NAME=Frodo
+POM_DEVELOPER_EMAIL=awangyun8@gmail.com
+POM_DEVELOPER_URL=http://frodoking.github.io/
+POM_ISSUE_MANAGEMENT_SYSTEM=Github
+POM_ISSUE_MANAGEMENT_URL=https://github.com/frodoking/App-Architecture/issues
+POM_INCEPTION_YEAR=2016
+POM_BINTRAY_PRPO=maven
+POM_GIT_URL=https://github.com/frodoking/App-Architecture.git
+POM_LICENCE_ALL=["Apache-2.0"]
 
 
