--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,10 @@ subprojects {
 subprojects { project ->
     repositories {
         jcenter()
+        mavenCentral()
+        maven {
+            url "https://oss.sonatype.org/content/repositories/snapshots/"
+        }
     }
 
     apply plugin: 'checkstyle'
