--- a/framework/build.gradle
+++ b/framework/build.gradle
@@ -4,4 +4,7 @@ dependencies {
     compile libraries.guava
 }
 
-apply from: "${rootDir.absolutePath}/scripts/maven_push_jar.gradle"
+apply from: "${rootProject.rootDir}/scripts/quality/quality.gradle"
+check.dependsOn 'checkstyle', 'findbugs', 'pmd'
+
+apply from: "${rootProject.rootDir}/scripts/maven_push_jar.gradle"
