--- a/simple/src/main/AndroidManifest.xml
+++ b/simple/src/main/AndroidManifest.xml
@@ -38,6 +38,7 @@
 
         <activity
                 android:name="com.frodo.app.android.simple.MainActivity"
+                android:configChanges="orientation|keyboardHidden|screenSize"
                 android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
