add redirect way.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,17 @@
         <meta-data
             android:name="com.frodo.app.android.core.network.integration.okhttp.OkHttpModule"
             android:value="HttpModule"/>
+        <activity
+            android:name="com.frodo.app.android.ui.activity.RedirectActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:label="redirect">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+                <category android:name="android.intent.category.BROWSABLE"/>
+                <data android:scheme="app" android:host="redirect" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
